# cpp_project_template

./: .astylerc  .gitignore  .gitmodules  CMakeLists.txt  README.md  fix_code_style.sh
Documentation/: Doxyfile.in  conf.py  index.rst
cmake/: common.cmake  doxygen.cmake
cmake/version/: git_version.cmake  git_version.h.in
src/examples/: CMakeLists.txt  hello_version.cpp
src/modules/logger/: CMakeLists.txt  log.cpp  log.h
tests/: CMakeLists.txt  test_false.cpp  test_true.cpp
tools/scripts/: fix_code_style.sh
